# zinc

./: README.md
lab1/: .gitignore
lab1/compiler/: .gitignore  DriverConfig.pm  Makefile  c0c.cabal
lab1/compiler/.svn/: entries
lab1/compiler/src/: Compile.hs  c0c.hs
lab1/compiler/tests/: Test.hs  exception01.l1  return01.l1  return02.l1  test.l1
lab1/doc/.svn/: all-wcprops  entries
lab1/tests/: return03.l1  test.l1
lab2/: .gitignore
lab2/compiler/: .gitignore  DriverConfig.pm  Makefile  c0c.cabal
lab2/doc/: README
lab2/tests/: return02.l2
lab3/: .gitignore
lab3/compiler/: .gitignore  DriverConfig.pm  Makefile  README  c0c.cabal  l3rt.c
lab3/compiler/bench/: MainBenchmarkSuite.hs  MainBenchmarkSuite.hs~
lab3/compiler/src/: Args.hs  Compile.hs  c0c.hs
lab3/compiler/src/Compile/: Cgc.hs  CheckAST.hs  CodeGen.hs  Elaborate.hs  Parse.hs  RegAlloc.hs  SSA.hs
lab3/compiler/src/Compile/Types/: AST.hs  AbstractAssembly.hs  Asm.hs  Ops.hs  PST.hs
lab3/compiler/src/Data/Heap/: Item.hs
lab3/compiler/src/Text/Parsec/: Token.hs
lab3/compiler/tests/: Test.hs
lab3/compiler/tests/Compile/: CgcTests.hs  RegAllocTests.hs
lab4/: .gitignore
lab4/compiler/: DriverConfig.pm
lab4/tests/: error01.l4  test.l4
lab5/compiler/: .gitignore  DriverConfig.pm  Makefile  bench.c
lab6/compiler/: .gitignore  DriverConfig.pm  README
lab6/examples/: .gitignore  length.c  length.l4  mean.c  mean.l4  multi.c  multi.l4  pair.c  pair.l4  poly.c
lab6/report/: .gitignore  L6_Report.tex  PolyExample.c  PolyFunction.c  cmacros.tex  fnptrs.c
(+129 files in other folders)
